<resources>
    <string name="app_name">Free Sign</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_page_label">Home Page</string>
    <string name="regAndLog_employer_label">Reg And Log Employer</string>
    <string name="reg_employer_label">Ref Employer</string>
    <string name="log_employer_label">Log Employer</string>
    <string name="hello_user_label">Hello User</string>
    <string name="user_profile_label">Hello User</string>
    <string name="home_screen_label">Home Screen</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="selected_item">Selected item:</string>

</resources>